# rust-exercises

./: .markdownlint.yml  .typos.yml  Cargo.toml  README.md  clippy.toml  release-hook.sh
.github/workflows/: rust.yml
dev/: Cargo.toml
exercises/: README.md
exercises/00_intro/: README.md  intro1.rs
exercises/01_variables/: README.md  variables1.rs  variables5.rs
exercises/02_functions/: README.md
exercises/03_if/: if1.rs
exercises/04_primitive_types/: README.md
exercises/05_vecs/: README.md  vecs2.rs
exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs
exercises/07_structs/: README.md  structs2.rs
exercises/08_enums/: enums1.rs  enums2.rs  enums3.rs
exercises/09_strings/: README.md  strings3.rs  strings4.rs
exercises/10_modules/: README.md  modules1.rs  modules2.rs  modules3.rs
exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
exercises/12_options/: README.md  options2.rs  options3.rs
exercises/13_error_handling/: README.md  errors1.rs  errors2.rs  errors3.rs  errors4.rs  errors5.rs  errors6.rs
exercises/14_generics/: generics1.rs  generics2.rs
exercises/15_traits/: README.md  traits1.rs  traits2.rs  traits3.rs  traits4.rs  traits5.rs
exercises/16_lifetimes/: README.md  lifetimes1.rs  lifetimes2.rs  lifetimes3.rs
exercises/17_tests/: tests1.rs  tests2.rs  tests3.rs
exercises/18_iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
exercises/19_smart_pointers/: README.md  arc1.rs  box1.rs  cow1.rs  rc1.rs
exercises/20_threads/: README.md  threads1.rs  threads2.rs  threads3.rs
exercises/21_macros/: README.md  macros1.rs  macros2.rs  macros3.rs  macros4.rs
exercises/22_clippy/: clippy1.rs  clippy3.rs
rustlings-macros/: Cargo.toml  info.toml
src/: app_state.rs  cargo_toml.rs  dev.rs  embedded.rs  exercise.rs  init.rs  main.rs  term.rs
test/: integration_tests.rs
(+72 files in other folders)
